infrastructure/kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: foreign-language-reader-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - foreignlanguagereader.com
    secretName: flr-tls
  rules:
  - host: foreignlanguagereader.com
    http:
      paths:
      - path: /api/*
        backend:
          serviceName: api
          servicePort: 4000
      - path: /language/*
        backend:
          serviceName: language-service
          servicePort: 8000
